fix overflow

--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -18,7 +18,7 @@
   cursor: pointer;
   box-shadow: 0px 0px 5px 3px #cbcbcb;
   transition: 0.3s linear;
-
+  overflow: hidden;
 }
 
 .boxshadow-small {
@@ -33,5 +33,6 @@
   transition: 0.3s linear;
   box-shadow: 0px 0px 5px 3px #cbcbcb;
   transition: 0.3s linear;
+  cursor: pointer;
 
 }
